[gd_scene load_steps=2 format=3 uid="uid://djoin1234567"]

[ext_resource type="Script" path="res://src/ui/join_dialog.gd" id="1_script"]

[node name="JoinDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Join Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CodeLabel" type="Label" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Lobby Code:"

[node name="CodeInput" type="LineEdit" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "ABC123"
alignment = 1
max_length = 6
caret_blink = true

[node name="ErrorLabel" type="Label" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="CancelButton" type="Button" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Cancel"

[node name="JoinButton" type="Button" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Join"
